Style fixes, removed fittext - too much headache - revised logo, set up error on no search results for sensor search

--- a/wp-content/themes/nccp/style.css
+++ b/wp-content/themes/nccp/style.css
@@ -16,7 +16,7 @@ del, dfn, em, font, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td { border: 0; font-family: inherit; font-size: 100%; font-style: inherit; font-weight: inherit; margin: 0; outline: 0; padding: 0; vertical-align: baseline; }
+table, caption, tbody, tfoot, thead, tr, th, td { border: 0; font-family: inherit; font-style: inherit; font-weight: inherit; margin: 0; outline: 0; padding: 0; vertical-align: baseline; }
 :focus { outline: 0; }
 body { background: #fff; line-height: 1; margin: 0; padding: 0; }
 ol, ul { list-style: none; }
@@ -32,7 +32,7 @@ li { list-style: none; }
 /* Tag-level styles */
 
 div, img, span { position: relative; }
-body, body.ui-body-c, body.ui-overlay-c { font-family: 'Oswald', sans-serif; font-weight: 300; color: #3f4e57; width: 100%; height: 100%; line-height: 1.8em; background-image: url('img/bg-mirrored.jpg'); background-size: contain; background-repeat: repeat; font-size: 1.7em;}
+body, body.ui-body-c, body.ui-overlay-c { font-family: 'Oswald', sans-serif; font-weight: 300; color: #3f4e57; width: 100%; height: 100%; line-height: 1.8em; background-image: url('img/bg-mirrored.jpg'); background-size: contain; background-repeat: repeat; }
 h1, h2, h3, h4 { line-height: 1.8em; font-weight: 400; margin-bottom: 1%;}
 h1 { font-size: 1.6em; }
 h2 { padding: 1% 1% 1% 0; font-size: 1.4em; }
@@ -65,7 +65,7 @@ li { list-style: disc; margin-left: 6%; margin-bottom: 2%; font-style: italic; f
 
 /* Main navigation */
 
-#main-navigation {  text-transform: lowercase;  width: 45%;  top: 0.1em;  white-space: nowrap;}
+#main-navigation {  text-transform: lowercase;  width: 85%;  top: 0.5em;  white-space: nowrap;}
 #main-navigation a { color: white;  /*font-size: 1em;*/ text-shadow: 0px 1px 1px #000; filter: dropshadow(color=#000, offx=2, offy=2); font-weight: normal;}
 #menu-main-navigation { margin-bottom: 0; text-align: center; top: 0.5em; position: relative;}
 #main-navigation li { display: inline-block; padding: 0% 5%; font-size: 1em; font-style: normal; margin: 0; border-right: 0.1em solid white; line-height: 1em;}
@@ -95,7 +95,8 @@ background-size: 100%; }
 #footer-bg { position: absolute; width: 100%; left: 0px; top: -20%;}
 #footer-logo { width: 13%; margin-right: 2%; position: relative; top: -4em;}
 #footer-logo img { width: 10%; }
-.footer-text { color: white; line-height: 2.2em; left: 18%; font-weight: normal; text-shadow: none; width: 50%; display: block; white-space: nowrap; top: -0.5em;}
+.footer-text { color: white; line-height: 2.2em; font-weight: 200; text-shadow: none; width: 50%; display: block; white-space: nowrap; margin: 0px auto 0px auto; padding-top: 1%; font-size: 0.8em; text-shadow: 0px 1px 1px #000; }
+.footer-text b { font-weight: 400; }
 #footer-text img {}
 #copyright { font-size: 1em; color: #efc48d; padding-right: 1%; position: absolute; width: 100%; left: -0.5%; background-image: url('img/footer-copyright-bg.png'); background-repeat: no-repeat; background-position: center; background-size: contain; bottom: -25%; text-shadow: none; font-weight: normal;}
 #copyright .date { font-size: 0.75em; }
@@ -183,7 +184,7 @@ article { margin-bottom: 4%; }
 
 @media ( max-width: 400px ) {
         
-    /*body { font-size: 0.7em; }*/
+    body { font-size: 0.7em; }
     .split-content { top: 14px; }
     h2 { padding: 2% 4%; }
     .footer-text { top: -7px; }
@@ -208,14 +209,14 @@ article { margin-bottom: 4%; }
 @media ( min-width: 800px ) {
         
     body { font-size: 1.9em; }
-    .footer-text { top: -22px; }
+    .footer-text { }
 
 }
 
 @media ( min-width: 1000px ) {
         
     body { font-size: 2em; }
-    .footer-text { top: -35px; }
+    .footer-text { }
 
 }
 
@@ -223,6 +224,6 @@ article { margin-bottom: 4%; }
         
     body { font-size: 2.7em; }
     .split-content { }
-    .footer-text { top: -40px; }
+    .footer-text { }
 
 }
